--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,9 @@ project_urls =
 packages = find:
 install_requires =
     numpy
+    pandas
+    scikit-image
+    tqdm
 python_requires = >=3.7
 package_dir =
     =em_alignment
