--- a/setup.cfg
+++ b/setup.cfg
@@ -36,10 +36,8 @@ install_requires =
     sofima
     tqdm
 python_requires = >=3.7
-package_dir =
-    =em_alignment
 setup_requires =
     setuptools-scm
 
 [options.packages.find]
-where = em_alignment
+where = src
