--- a/setup.cfg
+++ b/setup.cfg
@@ -37,9 +37,9 @@ install_requires =
     tqdm
 python_requires = >=3.7
 package_dir =
-    =em_alignment
+    = src
 setup_requires =
     setuptools-scm
 
 [options.packages.find]
-where = em_alignment
+where = src
