--- a/tox.ini
+++ b/tox.ini
@@ -25,4 +25,4 @@ passenv =
 deps =
     pytest  # https://docs.pytest.org/en/latest/contents.html
     pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
-commands = pytest -v --color=yes --cov=em_alignment --cov-report=xml
+commands = pytest -v --color=yes --cov=sbem --cov-report=xml
