--- a/setup.cfg
+++ b/setup.cfg
@@ -36,8 +36,10 @@ install_requires =
     sofima
     tqdm
 python_requires = >=3.7
+package_dir =
+    = src
 setup_requires =
     setuptools-scm
 
 [options.packages.find]
-where = sbem
+where = src
