--- a/setup.cfg
+++ b/setup.cfg
@@ -30,11 +30,14 @@ project_urls =
 [options]
 packages = find:
 install_requires =
+    fsspec
+    numcodecs
     numpy
     pandas
     scikit-image
     sofima
     tqdm
+    zarr
 python_requires = >=3.7
 package_dir =
     = src
