--- a/scripts/tile_registration.config
+++ b/scripts/tile_registration.config
@@ -31,6 +31,12 @@ start_cap=0.1
 final_cap=10.0
 remove_drift=True
 
+[WARP_CONFIG]
+use_clahe=True
+kernel_size=1024
+clip_limit=0.01
+nbins=256
+
 [SLURM]
 account=acc
 job_name=name
