Expose additional parameters.

--- a/scripts/tile_registration.config
+++ b/scripts/tile_registration.config
@@ -8,6 +8,9 @@ start_section=5321
 end_section=5751
 batch_size=8000
 stride=20
+overlaps_x=200,300
+overlaps_y=200,300
+min_overlap=20
 min_peak_ratio=1.4
 min_peak_sharpness=1.4
 max_deviation=5.
@@ -15,7 +18,7 @@ max_magnitude=0.
 min_patch_size=10
 max_gradient=-1.
 reconcile_flow_max_deviation=-1.
-n_workers=4
+n_workers=1
 
 [MESH_INTEGRATION_CONFIG]
 dt=0.001
@@ -32,6 +35,7 @@ final_cap=10.0
 remove_drift=True
 
 [WARP_CONFIG]
+margin=20
 use_clahe=True
 kernel_size=1024
 clip_limit=0.01
