Add new parameter `patch_size` to config and run-script.

--- a/scripts/tile_registration.config
+++ b/scripts/tile_registration.config
@@ -11,6 +11,7 @@ stride=20
 overlaps_x=200,300
 overlaps_y=200,300
 min_overlap=20
+patch_size=120,120
 min_peak_ratio=1.4
 min_peak_sharpness=1.4
 max_deviation=5.
