Split registration and warp&save.

--- a/scripts/tile_registration.config
+++ b/scripts/tile_registration.config
@@ -19,7 +19,6 @@ max_magnitude=0.
 min_patch_size=10
 max_gradient=-1.
 reconcile_flow_max_deviation=-1.
-n_workers=1
 
 [MESH_INTEGRATION_CONFIG]
 dt=0.001
@@ -41,6 +40,7 @@ use_clahe=True
 kernel_size=1024
 clip_limit=0.01
 nbins=256
+parallelism = 4
 
 [SLURM]
 account=acc
