Refactor slurm-job submission script.

--- a/scripts/tile_registration.config
+++ b/scripts/tile_registration.config
@@ -45,7 +45,8 @@ parallelism = 4
 [SLURM]
 account=acc
 job_name=name
-cpus_per_task=12
+cpus_register=12
+cpus_warp=32
 ntasks=1
 partition=partition
 mem=64G
