--- a/setup.cfg
+++ b/setup.cfg
@@ -31,12 +31,13 @@ project_urls =
 packages = find:
 install_requires =
     fsspec
+    jaxlib
     numcodecs
     numpy
     pandas
     prefect
     scikit-image
-    sofima
+    sofima@git+https://github.com/google-research/sofima
     tqdm
     zarr
 python_requires = >=3.7
