Add data structure v2.

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ install_requires =
     numpy
     pandas
     prefect
+    ruyaml
     scikit-image
     sofima@git+https://github.com/google-research/sofima
     tqdm
