--- a/scripts/tile_registration.config
+++ b/scripts/tile_registration.config
@@ -1,15 +1,13 @@
 [DEFAULT]
-sbem_experiment=/path/to/sbem/experiment
-block=block
-grid_index=1
+exp_path=/path/to/sbem/experiment.yaml
+sample_name=Sample
+tile_grid_num=1
 
 [REGISTER_TILES]
-start_section=5321
-end_section=5751
 batch_size=8000
 stride=20
-overlaps_x=200,300
-overlaps_y=200,300
+overlaps_x=200,200
+overlaps_y=200,200
 min_overlap=20
 patch_size=120,120
 min_peak_ratio=1.4
