--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,7 @@ install_requires =
     ome-zarr
     pandas
     prefect
+    prefect-dask
     ruyaml
     scikit-image
     sofima@git+https://github.com/google-research/sofima
