--- a/setup.cfg
+++ b/setup.cfg
@@ -30,12 +30,14 @@ project_urls =
 [options]
 packages = find:
 install_requires =
+    GitPython
     fsspec
     jaxlib
     numcodecs
     numpy
+    ome-zarr
     pandas
-    prefect
+    ruyaml
     scikit-image
     sofima@git+https://github.com/google-research/sofima
     tqdm
